--- a/CS/DevExpressMvc3CascadingCombo/Views/Home/Index.cshtml
+++ b/CS/DevExpressMvc3CascadingCombo/Views/Home/Index.cshtml
@@ -1,23 +1,9 @@
 @model CS.Models.Customer
 @{
-    ViewBag.Title = "Home Page";
+    ViewBag.Title = "ASP.NET MVC - Cascading Combo Boxes";
 }
 <h2>@ViewBag.Message</h2>
 @using(Html.BeginForm()) {  
-    <p>
-        To learn more about DevExpress Extensions for ASP.NET MVC visit <a href="http://devexpress.com/Products/NET/Controls/ASP-NET-MVC/"
-            title="ASP.NET MVC Website">http://devexpress.com/Products/NET/Controls/ASP-NET-MVC/</a>.
-    </p>
-
-    @Html.DevExpress().TextBox(settings => {
-        settings.Name = "ID";
-        settings.ReadOnly = true;
-    }).Bind(Model.ID).GetHtml()
-   
-    @Html.DevExpress().TextBox(settings => {
-        settings.Name = "Name";
-    }).Bind(Model.Name).GetHtml()
-
     @Html.Partial("CountryPartial", Model)
     @Html.Partial("CityPartial", Model)
     <input type="submit" value="Submit" />
