--- a/CS/DevExpressMvc3CascadingCombo/Views/Home/success.cshtml
+++ b/CS/DevExpressMvc3CascadingCombo/Views/Home/success.cshtml
@@ -1,7 +1,6 @@
 @{
-    ViewBag.Title = "success";
+    ViewBag.Title = "Success";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-<h2>
-    Data is successufully submitted</h2>
+<h2>Data is successufully submitted</h2>
 @Html.ActionLink("Reload the sample", "Index")
