--- a/CS/DevExpressMvc3CascadingCombo/Views/Home/CityPartial.cshtml
+++ b/CS/DevExpressMvc3CascadingCombo/Views/Home/CityPartial.cshtml
@@ -1,11 +1,13 @@
 @model CS.Models.Customer
 
 @Html.DevExpress().ComboBox(settings => {
-        settings.Name = "City";
-        settings.CallbackRouteValues = new { Controller = "Home", Action = "CityPartial" };
-        settings.Properties.ValueType = typeof(int);
-        settings.Properties.TextField = "Name";
-        settings.Properties.ValueField = "ID";
-        settings.Properties.CallbackPageSize = 20;
-        settings.Properties.ClientSideEvents.BeginCallback = "function(s, e) { e.customArgs['Country'] = Country.GetValue(); }";
+    settings.Name = "City";
+    settings.Properties.Caption = "City";
+    settings.Properties.CaptionSettings.Position = EditorCaptionPosition.Top;
+    settings.CallbackRouteValues = new { Controller = "Home", Action = "CityPartial" };
+    settings.Properties.ValueType = typeof(int);
+    settings.Properties.TextField = "Name";
+    settings.Properties.ValueField = "ID";
+    settings.Properties.CallbackPageSize = 20;
+    settings.Properties.ClientSideEvents.BeginCallback = "function(s, e) { e.customArgs['Country'] = Country.GetValue(); }";
 }).BindList(CS.Models.City.GetCities(Model.Country)).Bind(Model.City).GetHtml()
