--- a/CS/MvcComboBoxes/Views/Home/Index.cshtml
+++ b/CS/MvcComboBoxes/Views/Home/Index.cshtml
@@ -1,10 +1,7 @@
-@model IEnumerable<MvcComboBoxes.Models.Order>
-
 @{
     ViewBag.Title = "ASP.NET MVC - Cascading Combo Boxes";
 }
 
-
-@Html.Partial("CountryComboView", Model)
+@Html.Partial("CountryComboView")
 @Html.Partial("CityComboView")
 
